@@ -73,8 +73,6 @@ void do_run_script (GtkWidget *w, windata_t *vwin);
 
 void run_script_fragment (windata_t *vwin, gchar *buf);
 
-void do_stop_script (GtkWidget *w, windata_t *vwin);
-
 void gui_errmsg (int errcode);
 
 void gui_warnmsg (int errcode);
