@@ -81,7 +81,8 @@ static const char *gretl_error_messages[] = {
     N_("Matrix is not positive definite"),                       /* E_NOTPD */
     N_("Failed to calculate Jacobian"),                          /* E_JACOBIAN */
     N_("Insufficient observations for this operation"),          /* E_TOOFEW */
-    N_("Error executing function"),                              /* E_FUNCERR */      
+    N_("Error executing function"),                              /* E_FUNCERR */
+    N_("Execution aborted by request"),                          /* E_STOP */
     NULL,                                                        /* E_DB_DUP */
     NULL,                                                        /* E_OK */
     NULL                                                         /* E_MAX */
